Add files of 2nd week

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<script src="./01-01.js"></script>
-<script src="./01-02.js"></script>
+<!--<script src="./01-01.js"></script>-->
+<script src="./02-01.js"></script>
 
 </body>
 </html>
