Add files of 5th week (arr.sort())

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
 <!--<script src="./01-01.js"></script>-->
-<script src="./04-01.js"></script>
+<!--<script src="./04-01.js"></script>-->
+<script src="./05-02.js"></script>
 
 </body>
 </html>
