Add files of 6th week

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <!--<script src="./01-01.js"></script>-->
 <!--<script src="./04-01.js"></script>-->
-<script src="./05-02.js"></script>
+<!--<script src="./05-02.js"></script>-->
+<script src="./06-02.js"></script>
 
 </body>
 </html>
